tests/errors/misplaced-record-spread/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0024]: A record update allows a single `...spread`, and it must come first (`{ ...base, field: value }`).
  │
2 │ def main = { a: 1, ...base }
  │                    ^^^
  ╰─𜱶 tests/errors/misplaced-record-spread/main.pa:2:20
